--- a/user-guide.html
+++ b/user-guide.html
@@ -7,12 +7,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./static/css/index.css">
+    <link rel="stylesheet" href="/static/css/index.css">
+    <link rel="canonical" href="">
 </head>
 <body>
     <nav class="navbar-industrial">
         <div class="navbar-brand">
-             <h1><a href="index.html">Spin The Wheel</a></h1> <!-- Link back to main app -->
+             <h1><a href="index.html">Spin The Wheel</a></h1>
         </div>
         <button class="navbar-toggler" aria-label="Toggle navigation" aria-expanded="false" aria-controls="navbarIndustrialNav">
             <span class="toggler-icon"></span>
@@ -21,19 +22,18 @@
         </button>
         <div class="navbar-collapse" id="navbarIndustrialNav">
             <ul class="navbar-nav">
-                <li class="nav-item"><a href="index.html" class="nav-link">NEW</a></li>
-                <li class="nav-item"><a href="index.html#new-section" class="nav-link">Use Case</a></li>
-                <li class="nav-item"><a href="index.html#faq-section" class="nav-link">FAQ</a></li>
-                <li class="nav-item"><a href="user-guide.html" class="nav-link js-scroll-trigger">User Guide</a></li>
-                 <li class="nav-item"><a href="about-us.html" class="nav-link">About</a></li>
-                <li class="nav-item"><a href="contact-us.html" class="nav-link">Contact</a></li>
+                <li class="nav-item"><a href="/" class="nav-link">NEW</a></li>
+                <li class="nav-item"><a href="/#new-section" class="nav-link">Use Case</a></li>
+                <li class="nav-item"><a href="/#faq-section" class="nav-link">FAQ</a></li>
+                <li class="nav-item"><a href="/user-guide.html" class="nav-link js-scroll-trigger">User Guide</a></li>
+                 <li class="nav-item"><a href="/about-us.html" class="nav-link">About</a></li>
+                <li class="nav-item"><a href="/contact-us.html" class="nav-link">Contact</a></li>
             </ul>
         </div>
     </nav>
 
     <div class="manual-section-wrapper">
         <div id="user-manual-main" class="manual-section">
-            <!-- English User Guide Content Goes Here -->
             <h2>User Manual: Spin The Wheel</h2>
 
             <p><strong>Table of Contents</strong></p>
@@ -73,7 +73,7 @@
 
             <h3 id="introduction">1. Introduction</h3>
             <p>Welcome to Spin The Wheel! This versatile tool allows you to create a customizable spinning wheel with your chosen entries (names, items, tasks, decisions, etc.). Simply input your options, spin the wheel, and let a random result be chosen. It's perfect for conducting raffles, making group decisions, engaging classroom activities, spicing up remote events, and much more. When you need to make an impartial choice, let the wheel decide!</p>
-            <div class="placeholder-image"><img src="./static/img/namepickerwheel-1.png" alt="the main wheel interface"><p>the main wheel interface</p></div>
+            <div class="placeholder-image"><img src="/static/img/namepickerwheel-1.png" alt="the main wheel interface"><p>the main wheel interface</p></div>
 
 
             <h3 id="getting-started">2. Getting Started</h3>
@@ -85,7 +85,7 @@
 
             <h3 id="main-interface-overview">3. Main Interface Overview</h3>
             <p>The application interface is primarily split into two main sections: the <strong>Wheel Area</strong> and the <strong>Controls Area</strong>. On larger desktop screens, these sections appear side-by-side. On smaller mobile screens, the Controls Area is conveniently positioned below spin the Wheel Area.</p>
-            <div class="placeholder-image"><img src="./static/img/main-layout-2.png" alt="Diagram showing desktop side-by-side and mobile stacked layout"><p>Diagram showing desktop side-by-side and mobile stacked layout</p></div>
+            <div class="placeholder-image"><img src="/static/img/main-layout-2.png" alt="Diagram showing desktop side-by-side and mobile stacked layout"><p>Diagram showing desktop side-by-side and mobile stacked layout</p></div>
 
             <h4 id="wheel-area">3.1 Wheel Area</h4>
             <p>This is where the visual excitement unfolds.</p>
@@ -94,11 +94,11 @@
                 <li><strong>Wheel Overlay:</strong> When spin the wheel is idle, a semi-transparent overlay appears with the text "Click to Spin!". Clicking this will initiate the spin. This overlay disappears during the spin.</li>
                 <li><strong>Pointer:</strong> A triangular pointer (positioned on the right edge for desktop view and at the top center for mobile view) clearly indicates which segment is the winner once spin the wheel comes to a stop.</li>
             </ul>
-            <div class="placeholder-image"><img src="./static/img/namepickerwheel-1.png" alt="spin the Wheel Area highlighting canvas, overlay, and pointer"><p>spin the Wheel Area highlighting canvas, overlay, and pointer</p></div>
+            <div class="placeholder-image"><img src="/static/img/namepickerwheel-1.png" alt="spin the Wheel Area highlighting canvas, overlay, and pointer"><p>spin the Wheel Area highlighting canvas, overlay, and pointer</p></div>
 
             <h4 id="controls-area">3.2 Controls Area</h4>
             <p>This comprehensive section houses all the tools you need to input your data, manage your entries, and customize the wheel's appearance and behavior.</p>
-            <div class="placeholder-image"><img src="./static/img/controls-4.png" alt="Controls Area"><p>Controls Area</p></div>
+            <div class="placeholder-image"><img src="/static/img/controls-4.png" alt="Controls Area"><p>Controls Area</p></div>
             <ul>
                 <li><strong>Tabs: Entries & Results</strong>
                     <p>At the top of the Controls Area, you'll find two main tabs:</p>
@@ -117,8 +117,8 @@
                             </ul>
                         </li>
                     </ul>
-                    <div class="placeholder-image"><img src="./static/img/entries-5.png" alt="Entries tab active, showing text area and count"><p>Entries tab active, showing text area and count</p></div>
-                    <div class="placeholder-image"><img src="./static/img/results-6.png" alt="Results tab active, showing list area and count"><p>Results tab active, showing list area and count</p></div>
+                    <div class="placeholder-image"><img src="/static/img/entries-5.png" alt="Entries tab active, showing text area and count"><p>Entries tab active, showing text area and count</p></div>
+                    <div class="placeholder-image"><img src="/static/img/results-6.png" alt="Results tab active, showing list area and count"><p>Results tab active, showing list area and count</p></div>
                 </li>
                 <li><strong>Controls Header Actions</strong>
                     <ul>
@@ -127,7 +127,7 @@
                     </ul>
                 </li>
                 <li><strong>Advanced Settings Panel (Collapsible)</strong>
-                     <div class="placeholder-image"><img src="./static/img/settings-panel-7.png" alt="Advanced Settings panel"><p>Advanced Settings panel</p></div>
+                     <div class="placeholder-image"><img src="/static/img/settings-panel-7.png" alt="Advanced Settings panel"><p>Advanced Settings panel</p></div>
                     <ul>
                         <li><strong>Enable Sounds:</strong> Checkbox for all sound effects.</li>
                         <li><strong>Base Spin Duration (seconds):</strong> Input (1-10s) for minimum spin time.</li>
@@ -137,7 +137,7 @@
                     </ul>
                 </li>
                 <li><strong>Action Buttons (Entries Tab)</strong>
-                    <div class="placeholder-image"><img src="./static/img/shuffle-8.png" alt="Shuffle, Sort, Import, Export buttons"><p>Shuffle, Sort, Import, Export buttons</p></div>
+                    <div class="placeholder-image"><img src="/static/img/shuffle-8.png" alt="Shuffle, Sort, Import, Export buttons"><p>Shuffle, Sort, Import, Export buttons</p></div>
                     <ul>
                         <li><strong>🔀 Shuffle:</strong> Randomly reorders entries.</li>
                         <li><strong>⇅ Sort:</strong> Sorts entries alphabetically.</li>
@@ -146,13 +146,13 @@
                     </ul>
                 </li>
                 <li><strong>Color Theme Selector</strong>
-                    <div class="placeholder-image"><img src="./static/img/theme-9.png" alt="Color Theme dropdown"><p>Color Theme dropdown</p></div>
+                    <div class="placeholder-image"><img src="/static/img/theme-9.png" alt="Color Theme dropdown"><p>Color Theme dropdown</p></div>
                     <ul>
                         <li><strong>"Color Theme:" Dropdown:</strong> Choose predefined color palettes.</li>
                     </ul>
                 </li>
                 <li><strong>Main Controls</strong>
-                     <div class="placeholder-image"><img src="./static/img/updatewheel-10.png" alt="Update Wheel and Spin!"><p>Update Wheel and Spin</p></div>
+                     <div class="placeholder-image"><img src="/static/img/updatewheel-10.png" alt="Update Wheel and Spin!"><p>Update Wheel and Spin</p></div>
                     <ul>
                         <li><strong>Update Wheel Button:</strong> Refreshes wheel display after entry changes without spinning.</li>
                         <li><strong>Spin! Button:</strong> Starts the wheel spin.</li>
@@ -189,7 +189,7 @@
                 <li>Spin The wheel will spin for a set duration and then slow down to reveal the selected entry.</li>
                 <li>A <strong>Winner Modal</strong> (see section 6) will pop up announcing the winner, and confetti will appear (if sounds are enabled).</li>
             </ol>
-            <div class="placeholder-image"><img src="./static/img/congratulations-11.png" alt="sequence showing wheel spin and winner modal"><p>sequence showing wheel spin and winner modal</p></div>
+            <div class="placeholder-image"><img src="/static/img/congratulations-11.png" alt="sequence showing wheel spin and winner modal"><p>sequence showing wheel spin and winner modal</p></div>
 
             <h4 id="viewing-results">4.3 Viewing Results</h4>
             <ol>
@@ -262,13 +262,13 @@
                         <li>If you have more than 10 entries, entries 11 onwards will use the selected Color Theme.</li>
                         <li><strong>Reset Custom Colors Button:</strong> Click this to clear all your custom color choices. Spin the wheel will then fully use the selected Color Theme for all segments. A confirmation will be asked.</li>
                     </ol>
-                     <div class="placeholder-image"><img src="./static/img/color-pickers-12.png" alt="the 10 color pickers"><p>the 10 color pickers</p></div>
+                     <div class="placeholder-image"><img src="/static/img/color-pickers-12.png" alt="the 10 color pickers"><p>the 10 color pickers</p></div>
                 </li>
             </ul>
 
             <h3 id="interacting-winners">6. Interacting with Winners (Winner Modal Actions)</h3>
             <p>Once spin the wheel stops, a modal window pops up:</p>
-            <div class="placeholder-image"><img src="./static/img/winner-modal-13.png" alt="the Winner Modal showing title, winner name, Close, and Delete buttons"><p>the Winner Modal showing title, winner name, Close, and Delete buttons</p></div>
+            <div class="placeholder-image"><img src="/static/img/winner-modal-13.png" alt="the Winner Modal showing title, winner name, Close, and Delete buttons"><p>the Winner Modal showing title, winner name, Close, and Delete buttons</p></div>
             <ul>
                 <li><strong>Title:</strong> "Congratulations!"</li>
                 <li><strong>Winner's Name:</strong> Displays the name of the selected entry.</li>
@@ -287,7 +287,7 @@
                     <ul>
                         <li>A "Show Controls" button will appear (usually bottom-right) to restore the Controls Area.</li>
                     </ul>
-                    <div class="placeholder-image"><img src="./static/img/hidemode-14.png" alt="the Hide checkbox"><p>the Hide checkbox</p></div>
+                    <div class="placeholder-image"><img src="/static/img/hidemode-14.png" alt="the Hide checkbox"><p>the Hide checkbox</p></div>
                 </li>
                 <li><strong>To Show Controls:</strong> Click the "Show Controls" button (if controls are hidden) OR uncheck the "Hide" checkbox.</li>
             </ul>
@@ -318,8 +318,8 @@
         </div>
     </div>
 <footer>
-    <p>© 2025 Spin The Wheel. All Rights Reserved. <a href="privacy-policy.html">Privacy Policy</a> | <a href="terms-of-use.html">Terms of Use</a> | <a href="user-guide.html">Help</a></p>
+    <p>© 2025 Spin The Wheel. All Rights Reserved. <a href="/privacy-policy.html">Privacy Policy</a> | <a href="/terms-of-use.html">Terms of Use</a> | <a href="/user-guide.html">Help</a></p>
 </footer>
-    <script src="./static/js/userguide.js"></script>
+    <script src="/static/js/userguide.js"></script>
 </body>
 </html>
