--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -7,7 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./static/css/index.css">
+    <link rel="stylesheet" href="/static/css/index.css">
+    <link rel="canonical" href="">
 </head>
 <body>
     <nav class="navbar-industrial">
@@ -21,18 +22,18 @@
         </button>
         <div class="navbar-collapse" id="navbarIndustrialNav">
             <ul class="navbar-nav">
-                <li class="nav-item"><a href="index.html" class="nav-link">NEW</a></li>
-                <li class="nav-item"><a href="index.html#new-section" class="nav-link">Use Case</a></li>
-                <li class="nav-item"><a href="index.html#faq-section" class="nav-link">FAQ</a></li>
-                <li class="nav-item"><a href="user-guide.html" class="nav-link js-scroll-trigger">User Guide</a></li>
-                 <li class="nav-item"><a href="about-us.html" class="nav-link">about</a></li>
-                <li class="nav-item"><a href="contact-us.html" class="nav-link">contact</a></li>
+                <li class="nav-item"><a href="/" class="nav-link">NEW</a></li>
+                <li class="nav-item"><a href="/#new-section" class="nav-link">Use Case</a></li>
+                <li class="nav-item"><a href="/#faq-section" class="nav-link">FAQ</a></li>
+                <li class="nav-item"><a href="/user-guide.html" class="nav-link js-scroll-trigger">User Guide</a></li>
+                 <li class="nav-item"><a href="/about-us.html" class="nav-link">about</a></li>
+                <li class="nav-item"><a href="/contact-us.html" class="nav-link">contact</a></li>
             </ul>
         </div>
     </nav>
 
     <div class="manual-section-wrapper">
-        <div class="manual-section"> <!-- Using .manual-section class for styling -->
+        <div class="manual-section">
             <h2>Terms of Use</h2>
             <p><strong>Last Updated: [ 06-20, 2025 ]</strong></p>
 
@@ -90,6 +91,6 @@
 <footer>
     <p>© 2025 Spin The Wheel. All Rights Reserved.</p>
 </footer>
-    <script src="./static/js/userguide.js"></script>
+    <script src="/static/js/userguide.js"></script>
 </body>
 </html>
