--- a/about-us.html
+++ b/about-us.html
@@ -55,9 +55,7 @@
             </ul>
 
             <h3>Who We Are</h3>
-            <p>[If you are an individual developer, you can write a short bio here. If it's a team or a hobby project, describe that. Example for an individual:]</p>
-            <p>This Lucky Wheel / Name Picker was developed by [Your Name/Alias], a passionate web developer dedicated to creating useful and engaging online tools. What started as a personal project grew into a desire to share a simple solution with a wider audience.</p>
-            <p>[Example for a small team/project idea:]</p>
+            <p>This Spin the Wheel, was developed by our team – a group of passionate web developers dedicated to creating useful and engaging online tools. What initially started as an individual endeavor grew into a collective desire to share a simple solution with a wider audience who love to share.</p>
             <p>We are a small team of enthusiasts who love creating simple yet powerful tools. The Lucky Wheel / Name Picker is one of our projects aimed at making everyday tasks and fun activities a little bit easier and more exciting.</p>
 
             <h3>Looking Ahead</h3>
