--- a/about-us.html
+++ b/about-us.html
@@ -55,12 +55,12 @@
             </ul>
 
             <h3>Who We Are</h3>
-            <p>We are a small team of enthusiasts who love creating simple yet powerful tools. The Lucky Wheel / Name Picker is one of our projects aimed at making everyday tasks and fun activities a little bit easier and more exciting.</p>
+            <p>We are a small team of enthusiasts who love creating simple yet powerful tools. This spin the wheel is one of our projects aimed at making everyday tasks and fun activities a little bit easier and more exciting.</p>
 
             <h3>Looking Ahead</h3>
-            <p>We are always thinking of ways to improve the Lucky Wheel / Name Picker. Future ideas include [mention 1-2 potential future ideas, e.g., "more themes," "advanced sharing options," or "sound customization"]. We value user feedback, so if you have any suggestions, please feel free to reach out!</p>
+            <p>We are always thinking of ways to improve spin the wheel. Future ideas include [e.g., "more themes," "advanced sharing options," or "sound customization"]. We value user feedback, so if you have any suggestions, please feel free to reach out!</p>
 
-            <p>Thank you for using our wheel!</p>
+            <p>Thank you for using our spin the wheel!</p>
         </div>
     </div>
 
