--- a/contact-us.html
+++ b/contact-us.html
@@ -36,7 +36,7 @@
         <div class="manual-section">
             <h2>Contact Us</h2>
 
-            <p>We'd love to hear from you! Whether you have a question about our Lucky Wheel / Name Picker, a suggestion for a new feature, a bug report, or just want to say hello, please feel free to reach out.</p>
+            <p>We'd love to hear from you! Whether you have a question about our spin the wheel, a suggestion for a new feature, a bug report, or just want to say hello, please feel free to reach out.</p>
 
             <h3>Get in Touch</h3>
             <p>The best way to contact us is via email:</p>
