--- a/contact-us.html
+++ b/contact-us.html
@@ -43,7 +43,7 @@
             <p class="contact-info">
                 <strong>Email:</strong> <a href="mailto:chongzhidatech@gmail.com" style="color:#ccc">chongzhidatech@gmail.com</a>
             </p>
-            <p>We aim to respond to all inquiries within [e.g., 24-48 business hours / a few days].</p>
+            <p>We aim to respond to all inquiries within 24-48 business hours.</p>
 
             <h3>Feedback & Suggestions</h3>
             <p>Your feedback is invaluable to us as we strive to make this tool better. If you have ideas on how we can improve or features you'd like to see, please don't hesitate to share them.</p>
