--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="twitter:description" content="Need to make a random choice? Use our free online spin the Wheel! Easily enter names or items, add weights, and spin for an instant, unbiased result. Ideal for raffles, name picking, and decision making.">
     <meta name="twitter:image" content="/static/img/namepickerwheel-1.png">
 
-    <link rel="canonical" href="https://test-wheel.netlify.app/">
+    <link rel="canonical" href="">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
