--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="navbar-collapse" id="navbarIndustrialNav">
             <ul class="navbar-nav">
                 <li class="nav-item"><a href="/" class="nav-link">NEW</a></li>
-                <li class="nav-item"><a href="#new-section" class="nav-link">Use Case</a></li>
+                <li class="nav-item"><a href="#trending-wheels" class="nav-link">tools</a></li>
                 <li class="nav-item"><a href="#faq-section" class="nav-link">FAQ</a></li>
                 <li class="nav-item"><a href="./user-guide.html" class="nav-link js-scroll-trigger">User Guide</a></li>
                  <li class="nav-item"><a href="./about-us.html" class="nav-link">about</a></li>
