--- a/truth-or-dare-wheel.html
+++ b/truth-or-dare-wheel.html
@@ -44,6 +44,7 @@
         <div class="navbar-collapse" id="navbarIndustrialNav">
             <ul class="navbar-nav">
                 <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="#trending-wheels" class="nav-link">tools</a></li>
                 <li class="nav-item"><a href="#faq-section" class="nav-link">FAQ</a></li>
                 <li class="nav-item"><a href="./user-guide.html" class="nav-link js-scroll-trigger">User Guide</a></li>
                  <li class="nav-item"><a href="./about-us.html" class="nav-link">about</a></li>
